@@ -43,6 +43,7 @@
 (require 'inflections)
 
 (require 'rails-core)
+(require 'rails-ruby)
 (require 'rails-lib)
 (require 'rails-cmd-proxy)
 (require 'rails-navigation)
